# ai-benchmarks

./: .gitignore  ADD_NEW_BENCHMARK_GUIDE.md  DOCS_INDEX.md  README.md  SETUP_GUIDE.md  pyproject.toml
benchmarks/aime2025/: README.md  __init__.py  aime_benchmark.py  test_aime_benchmark.py
benchmarks/aime2025/tasks/: aime2025_aime2025_i_1.json  aime2025_aime2025_i_10.json  aime2025_aime2025_i_11.json  aime2025_aime2025_i_12.json  aime2025_aime2025_i_13.json  aime2025_aime2025_i_14.json  aime2025_aime2025_i_15.json  aime2025_aime2025_i_2.json  aime2025_aime2025_i_3.json  aime2025_aime2025_i_4.json  aime2025_aime2025_i_5.json  (+19 more)
benchmarks/browse_comp/: README.md  __init__.py  browse_comp_benchmark.py  test_browse_comp.py
benchmarks/gaia/: README.md  __init__.py  gaia_benchmark.py  test_gaia_benchmark.py
benchmarks/gsm8k/: README.md  __init__.py  gsm8k_benchmark.py  run_gpt41_on_gsm8k.py  test_gsm8k_benchmark.py
benchmarks/ml_bench/: README.md  __initi__.py  ml_bench_benchmark.py  run_gpt41_on_ml_bench.py  test_ml_bench_benchmark.py
benchmarks/swebench/: README.md  __init__.py  simple_example.py  swebench.py  task_spec.py
core/: __init__.py  base_benchmark.py  model.py
core/models/: __init__.py  task.py
examples/: __init__.py  example_aime.py  example_browse_comp.py  example_evaluate_gpt41_on_gsm8k.py  example_evaluate_gpt41_on_ml_bench.py  example_gaia.py  modular_usage_example.py  unified_example.py
examples/data/: log_of_claude-3.7_evaluation_on_gsm8k.txt  log_of_gpt-4.1_evaluation_on_gsm8k.txt  log_of_gpt-4.1_evaluation_on_ml_bench.txt
(+35 files in other folders)
